@@ -55,9 +55,10 @@ public class Terminal extends Component {
         addCommand("infiniteStamina", new InfiniteStaminaCommand());
         addCommand("infiniteDash", new InfiniteDashCommand());
         addCommand("infiniteJumps", new InfiniteJumpsCommand());
-
+        addCommand("spawn", new SpawnCommand());
         addCommand("doorOverride", new DoorOverrideCommand());
-//        addCommand("teleport", new TeleportCommand());
+        addCommand("teleport", new TeleportCommand());
+        addCommand("travel", new TravelCommand());
 
         // Initial index build
         rebuildAutocompleteIndex();
@@ -189,7 +190,7 @@ public class Terminal extends Component {
         if (!s.isEmpty()) {
             // replace first token with suggestion
             String rest = stripFirstToken(enteredMessage);
-            setEnteredMessage(s.getFirst() + rest);
+            setEnteredMessage(s.get(0) + rest);
         }
     }
 
